<resources>
    <string name="app_name">Tenantmgt-android</string>
    <string name="view_description">View</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="go_back_to_login">Go back to Login</string>
    <string name="retype_password">Retype Password</string>
    <string name="email">Email</string>
</resources>